--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
     <main>
       <div class="container">
-        <img src="/images/image-qr-code.png" alt="qr code" />
+        <img src="./images/image-qr-code.png" alt="qr code" />
         <div class="subtitle">Improve your front-end skills by building projects</div>
         <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
