--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
       <div class="container">
-        <img src="./images/image-qr-code.png" alt="qr code" />
+        <img src="images/image-qr-code.png" alt="qr code" />
         <div class="subtitle">Improve your front-end skills by building projects</div>
         <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
